--- a/site/_layouts/blog-post.njk
+++ b/site/_layouts/blog-post.njk
@@ -3,7 +3,7 @@ layout: base.njk
 ---
 
 <main class="post-container lg:px-24 m-10 mt-32">
-  <h1 class="font-black mx-4 my-8 md:text-[4.5em] lg:text-9xl leading-none text-onBackground" style="letter-spacing: -0.03em">
+  <h1 class="font-black mx-4 my-8 text-5xl md:text-7xl lg:text-9xl leading-none text-onBackground" style="letter-spacing: -0.03em">
     {{ title }}
   </h1>
   {% image socialImage, socialImageAlt or "Cover post" %}
