--- a/site/_includes/blog-post-list.njk
+++ b/site/_includes/blog-post-list.njk
@@ -9,25 +9,33 @@
   </div>
   <div class="flex flex-row flex-wrap justify-center gap-2 md:gap-8 w-full">
     {% for post in collections.blog %}
-      <a href="{{ post.url }}" class="py-5 cursor-pointer lg:w-2/5 medium:w-2/5 group">
-
+      <a href="{{ post.url }}" class="cursor-pointer lg:w-2/5 medium:w-2/5 group rounded-md p-1 shadow-md hover:shadow-lg transition-shadow">
         <div class="rounded-lg overflow-clip mb-2">
           {% image post.data.socialImage, post.data.socialImageAlt or "Cover post" %}
         </div>
 
-        <h2 style="letter-spacing: -0.03em" class="font-extrabold my-2 md:text-[2em] text-[2.5em] leading-none">
-          {{ post.data.title }}
-        </h2>
-        <p class="leading-relaxed text-secondary mb-1">
-          {{ post.data.description }}
-        </p>
+        <div class="mx-4">
+          <h2 style="letter-spacing: -0.03em" class="font-extrabold my-2 md:text-[2em] text-[2.5em] leading-none group-hover:text-primary transition-colors">
+            {{ post.data.title }}
+          </h2>
+          <p class="leading-relaxed text-secondary mb-5">
+            {{ post.data.description }}
+          </p>
 
-        <div class="flex flex-row flex-wrap w-full gap-1 text-center">
-          {% for tag in post.data.keywords %}
-            <div>
-              <div class="font-mono inline-flex p-1 rounded leading-4 text-onTertiary bg-tertiary" style="font-size: 0.7em">{{ tag }}</div>
-            </div>
-          {% endfor %}
+          <div class="flex flex-row justify-between w-full">
+            <span class="flex flex-row gap-2 font-bold text-primary mb-2">
+              {% for type in post.data.type %}
+                <span>{{ type }}</span>
+              {% endfor %}
+            </span>
+
+            <span>
+              {% for tag in post.data.keywords %}
+                <span class="text-tertiary">{{ tag }}</span>
+                {% if not loop.last %},{% endif %}
+              {% endfor %}
+            </span>
+          </div>
         </div>
       </a>
     {% endfor %}
