--- a/site/_layouts/blog-post.njk
+++ b/site/_layouts/blog-post.njk
@@ -17,12 +17,14 @@ layout: base.njk
   </div>
 
   <div class="flex flex-row justify-between items-end text-secondary">
-    <span class="flex flex-row gap-4 items-center">
-      <span class="avatar rounded-full overflow-hidden object-cover w-10 h-10 [&_img]:w-full [&_img]:h-full">
-        {% image author.avatar, "Author avatar" %}
+    {% if author.name %}
+      <span class="flex flex-row gap-4 items-center">
+        <span class="avatar rounded-full overflow-hidden object-cover w-10 h-10 [&_img]:w-full [&_img]:h-full">
+          {% image author.avatar, "Author avatar" %}
+        </span>
+        <p class="font-bold">{{ author.name }}</p>
       </span>
-      <p class="font-bold">{{ author.name or site.author.name }}</p>
-    </span>
+    {% endif %}
 
     <p class="whitespace-nowrap">{{ page.date | humanReadableDate }}</p>
   </div>
